syntax = "proto3";

option go_package = "pkg/api/v1";

package api;

import "api/google/api/annotations.proto";
service QuizService{
  rpc CreateQuiz(CreateQuizRequest) returns (CreateQuizResponse){
    option(google.api.http) = {
      post: "/v1/quiz"
      body: "*"
    };
  }
  rpc GetQuiz(GetQuizRequest) returns (GetQuizResponse){
    option(google.api.http) = {
      get: "/v1/quiz/{quiz_id}"
    };
  }
  rpc GetQuizByAuthor (GetQuizByAuthorRequest) returns (GetQuizByAuthorResponse){
    option(google.api.http) = {
      get: "/v1/quiz/author/{author}"
    };
  }
}
message CreateQuizRequest{
  string name = 1;
  string author = 2;
  optional string image_id = 3;
  optional string description = 4;
  repeated CreateQuestion question = 5;
}
message CreateQuestion{
  string question_text = 1;
  optional string image_id = 2;
  repeated CreateAnswer answer = 3;
}
message CreateAnswer{
  string answer_text = 1;
  bool is_correct = 2;
}
message CreateQuizResponse{
  string quiz_id = 1;
  string short_id = 2;
  string message = 3;
}
message GetQuizRequest{
  string quiz_id = 1;
}
message GetQuizResponse{
  string shortID = 1;
  string name = 2;
  string author = 3;
  optional string image_id = 4;
  optional string description = 5;
  repeated CreateQuestion question = 6;
}
message GetQuizByAuthorRequest{
  string author = 1;
}
message GetQuizzes{
  repeated GetQuizResponse quizzes = 1;
}
message GetQuizByAuthorResponse{
  repeated GetQuizzes author_quizzes = 1;
}